--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,15 @@ code {
   background-repeat: no-repeat;
   background-size: contain;
 }
+
+
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
